update readme and fix css scrollbar

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
 	background-color: var(--bg-body);
 	font-size: 1.6rem;
 	width: 100vw;
+	overflow: hidden;
 }
 
 .page {
